# the_vibe_code_auditor

./: .env.example  .gitignore  Dockerfile  README.md  check_report.py  main.py  pyproject.toml  test.py
audit/: audit_report.md  report_onpeer_generated.md  report_onself_generated.md
src/: graph.py  state.py
src/nodes/: context.py  detectives.py  evidence_aggregator.py  judges.py  justice.py
src/tools/: chief_justice_tools.py  doc_tools.py  justice_tools.py  render_graph.py  repo_tools.py  vision_tools.py
src/utils/: ast_utils.py
tests/: test_doc_analyst.py  test_repo_tools.py
