[project]
name = "the-ai-court-room"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.0.9",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "openai>=2.24.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.1",
    "pypdf2>=3.0.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-languages>=1.10.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
